# ex4new

./: AStarSearch.h  Astar.cpp  Astar.h  BestFirstSearch.cpp  BestFirstSearch.h  Bfs.h  BfsSearch.cpp  BfsSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Dfs.h  DfsSearch.cpp  DfsSearch.h  FileCacheManager.cpp  FileCacheManager.h  Graph.cpp  Graph.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  README.md  Searchable.h  Searcher.h  Server.h  Solver.h  SolverAdapter.cpp  SolverAdapter.h  State.h  StateComperator.h  StringReverser.cpp  (+7 more)
